<resources>
    <string name="app_name">Carlendar</string>
    <string name="vid1"><![CDATA[https://firebasestorage.googleapis.com/v0/b/carlendar\-1.appspot.com/o/videos%2Foilcheck.mp4?alt=media&token=332c22ec\-95d5\-458f\-953c\-4f4d5cd06eee]]></string>
    <string name="vid2"><![CDATA[https://firebasestorage.googleapis.com/v0/b/carlendar\-1.appspot.com/o/videos%2Fchecktire.mp4?alt=media&token=c37cc0dd\-68cc\-40f6\-80ea\-24a60b93e547]]></string>
    <string name="vid3"><![CDATA[https://firebasestorage.googleapis.com/v0/b/carlendar\-1.appspot.com/o/videos%2Fairconditionerissue.mp4?alt=media&token=59e4e5bb\-3b7c\-484a\-8584\-c4881639886f]]></string>
    <string name="vid4"><![CDATA[https://firebasestorage.googleapis.com/v0/b/carlendar\-1.appspot.com/o/videos%2Fisbatterydead.mp4?alt=media&token=e3e8c439\-bcac\-4916\-822c\-7bfaaa07ad39]]></string>
    <string name="vid5"><![CDATA[https://firebasestorage.googleapis.com/v0/b/carlendar\-1.appspot.com/o/videos%2Fstartingtrubble.mp4?alt=media&token=bd5ed31a\-036a\-4443\-874e\-d2759c1ed9f9]]></string>
    <string name="vid6"><![CDATA[https://firebasestorage.googleapis.com/v0/b/carlendar\-1.appspot.com/o/videos%2Fpreventoverheating.mp4?alt=media&token=6578c043\-7b8c-4061\-a0a7\-c174bec7899c]]></string>
    <string name="vid7"><![CDATA[https://firebasestorage.googleapis.com/v0/b/carlendar\-1.appspot.com/o/videos%2Fdealingoverheat.mp4?alt=media&token=baaa011a\-312f\-4cbb\-9a01\-1a70e03b64ac]]></string>
    <string name="vid8"><![CDATA[https://firebasestorage.googleapis.com/v0/b/carlendar\-1.appspot.com/o/videos%2Fburningsmell.mp4?alt=media&token=373c4397\-424f\-4633\-a61e\-9d5d7f2ffb30]]></string>
    <string name="vid9"><![CDATA[https://firebasestorage.googleapis.com/v0/b/carlendar\-car\-calendar.appspot.com/o/videos%2Fwhylightson.mp4?alt=media&token=d1da7bbe\-4ab3\-4545\-b2bf\-b87776cd3974]]></string>
    <string name="got_an_issue_here_s_a_video">Got an issue? Here\'s a video</string>
    <string name="dashboard_lights">Dashboard lights</string>
    <string name="my_calendar">My Calendar</string>
    <string name="avoid_warnings_description">avoid_warnings_description</string>
    <string name="store">Store</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="apply_settings">Apply Settings</string>
    <string name="text_size">Text Size:</string>
    <string name="default1">Default</string>
    <string name="push_notifications">Notifications:</string>
    <string name="close">Close</string>

    <string-array name="Module">
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
        <item>1</item>
    </string-array>
</resources>
