<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/layout_round">

    <LinearLayout
        android:id="@+id/textsize_settings_layout"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:background="@drawable/primary_round">

        <TextView
            android:text="@string/text_size"
            android:layout_weight="1"
            android:textSize="16sp"
            android:textColor="@color/colorBlack"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent" />

        <RadioGroup
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/default_text_radio_btn"
                android:text="@string/default1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <RadioButton
                android:id="@+id/large_text_radio_btn"
                android:text="Large Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </RadioGroup>
    </LinearLayout>

        <Spinner
            android:spinnerMode="dropdown"
            android:layout_below="@id/textsize_settings_layout"
            android:layout_margin="4dp"
            android:id="@+id/background_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:background="@drawable/primary_round"/>

    <LinearLayout
        android:id="@+id/push_notifications_settings_layout"
        android:layout_below="@id/background_spinner"
        android:layout_margin="4dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:background="@drawable/primary_round">

        <TextView
            android:layout_marginStart="8dp"
            android:text="@string/push_notifications"
            android:textColor="@color/colorBlack"
            android:layout_weight="1"
            android:textSize="16sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ToggleButton
            android:id="@+id/toggle_settings_btn"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/push_notifications_settings_layout"
        style="@style/Button"
        android:background="@drawable/primary_round">
        <Spinner
            android:id="@+id/spinner_push"
            android:spinnerMode="dialog"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </RelativeLayout>
    <Button
        android:id="@+id/privacy_policy_btn"
        android:layout_above="@+id/apply_settings_btn"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Button"
        android:background="@drawable/primary_round"
        android:layout_margin="8dp"/>


        <Button
            android:id="@+id/apply_settings_btn"
            android:layout_alignParentBottom="true"
            android:text="@string/apply_settings"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Button"
            android:background="@drawable/primary_round"/>


</RelativeLayout>